[TestGeneratedContent/Kind_configuration_content - 1]
apiVersion: ksail.dev/v1alpha1
kind: Cluster
metadata:
  name: test-cluster
spec:
  distribution: Kind
  distributionConfig: kind.yaml
  sourceDirectory: k8s

---

[TestGeneratedContent/Kind_configuration_content - 2]
apiVersion: kind.x-k8s.io/v1alpha4
kind: Cluster
name: test-cluster

---

[TestGeneratedContent/Kind_configuration_content - 3]
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources: []

---

[TestGeneratedContent/K3d_configuration_content - 1]
apiVersion: ksail.dev/v1alpha1
kind: Cluster
metadata:
  name: test-cluster
spec:
  distribution: K3d
  distributionConfig: k3d.yaml
  sourceDirectory: manifests

---

[TestGeneratedContent/K3d_configuration_content - 2]
apiVersion: k3d.io/v1alpha5
kind: Simple
metadata:
  name: test-cluster

---

[TestGeneratedContent/K3d_configuration_content - 3]
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources: []

---

[TestGeneratedContent/EKS_configuration_content - 1]
apiVersion: ksail.dev/v1alpha1
kind: Cluster
metadata:
  name: test-cluster
spec:
  distribution: EKS
  distributionConfig: eks-config.yaml
  sourceDirectory: workloads

---

[TestGeneratedContent/EKS_configuration_content - 2]
apiVersion: eksctl.io/v1alpha5
kind: ClusterConfig
metadata:
  name: test-cluster
  region: us-west-2
nodeGroups:
- desiredCapacity: 2
  instanceType: m5.large
  maxSize: 3
  minSize: 1
  name: test-cluster-workers
  privateNetworking: false

---

[TestGeneratedContent/EKS_configuration_content - 3]
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources: []

---

[TestScaffold/Tind_distribution_not_implemented - 1]
talos-in-docker distribution is not yet implemented
---

[TestScaffold/Unknown_distribution - 1]
provided distribution is unknown
---

